# XYY-Game-Engine

./: .gitignore  CMakeLists.txt  XYY_Game_Engine.sln  XYY_Game_Engine.vcxproj  XYY_Game_Engine.vcxproj.filters  b.xml  dev.md  main.cpp  readme.md
Code/: XYY.cpp  XYY.h  main.cpp
Code/Component/: Scene.cpp  Scene.h  Window.cpp  Window.h  _Window.cpp
Code/Drive/: Driver.h  IODrive.cpp  IODrive.h  LightDrive.cpp  LightDrive.h  RendDrive.cpp  RendDrive.h
Code/Drive/GlobalDriver/: GlobalDriver.h  GlobalIODriver.cpp  GlobalIODriver.h  GlobalLightRendDriver.cpp  GlobalLightRendDriver.h  GlobalLogicDriver.h  GlobalSyncDriver.cpp  GlobalSyncDriver.h
Code/Drive/LocalDriver/: LocalDriver.h  LocalLightDriver.cpp  LocalLightDriver.h  LocalRendDriver.cpp  LocalRendDriver.h
Code/Element/: Camera.cpp  Camera.h  CameraElement.cpp  CameraElement.h  Cube.cpp  Cube.h  CubeElement.cpp  CubeElement.h  DirLight.cpp  DirLight.h  Element.cpp  Element.h  Light.cpp  Light.h  LightElement.cpp  LightElement.h  Model.cpp  Model.h  Object.cpp  Object.h  ObjectElement.cpp  ObjectElement.h  PointLight.cpp  PointLight.h  Shader.cpp  Shader.h  SkyBox.cpp  SkyBox.h  SkyboxElement.h  SpotLight.cpp  SpotLight.h  mesh.cpp  mesh.h
Code/ResManager/: ResManager.cpp  ResManager.h
Code/Resource/: CubeResource.h  MeshResource.cpp  MeshResource.h  ModelResource.cpp  ModelResource.h  Resource.h  ShaderResource.cpp  ShaderResource.h  SkyboxResource.h  TextureResource.h  Window.cpp  Window.h
Code/Scene/: Scene.cpp  Scene.h  SceneContent.cpp  SceneContent.h
Code/Sync/: GlobalSync.cpp  GlobalSync.h
Code/Variable/: GlobalVariable.cpp  GlobalVariable.h
GLSL/: object.vert
code/: CMakeLists.txt  XYY_Game_Engine.cpp  XYY_Game_Engine.h
code/Component/: _Scene.cpp  _Scene.h
code/Driver/GlobalDriver/: GlobalDebugoutDriver.cpp  GlobalDriver.h  GlobalIODriver.cpp  GlobalIODriver.h  GlobalLightRendDriver.cpp  GlobalLightRendDriver.h  GlobalLogicDriver.cpp  GlobalLogicDriver.h  GlobalSyncDriver.cpp
code/Driver/LocalDriver/: LocalDriver.h  LocalLightDriver.cpp  LocalLightDriver.h  LocalRendDriver.cpp  LocalRendDriver.h
code/Element/: CameraElement.cpp  CameraElement.h  CubeElement.cpp  CubeElement.h  Element.h  LightElement.cpp  ObjectElement.cpp  SkyboxElement.cpp  SkyboxElement.h
code/GLSL/: cube.frag  light.frag
code/Resource/: CubeResource.cpp  ModelResource.cpp  Resource.cpp  ShaderResource.cpp  SkyboxResource.h  TextureResource.cpp  TextureResource.h  Window.cpp  Window.h
code/Scene/: Scene.cpp  Scene.h  SceneContent.cpp  SceneContent.h
code/Scxmlexample/: coordinate.xml  starskybox.xml  test.xml
code/Sync/: CMakeLists.txt
code/resources/objects/demo/: bush.gltf  lamp1.gltf  lamp2.gltf  lamp3.gltf  lamp4.gltf  lamp5.gltf  longchair1.gltf  longchair2.gltf  longchair4.gltf  sculpture.gltf  stone_black.gltf  stonechair.gltf  tree_cherry.gltf  tree_green.gltf  tree_pine.gltf  垃圾桶1.gltf  垃圾桶2.gltf  电箱.gltf  石碑.gltf  自行车支架.gltf  警示牌1.gltf  警示牌2.gltf  路标.gltf  路障2.gltf  钟楼.gltf
code/resources/objects/demo/zl/: 钟楼.blend  钟楼.blend1  钟楼.mtl
code/resources/objects/spartan_armour_mkv_-_halo_reach/: scene.gltf
code/resources/textures/starskybox/: ren.bat  新建文本文档.txt  这里是文耀的space.html
code/resources/textures/starskybox/这里是文耀的space_files/: core.php  z_stat.php
contrib/include/: glad.c  stb_image.h
contrib/include/glad/: glad.h
contrib/lib/: glfw3.lib
dependence/include/glad/: glad.h
dependence/lib/: assimp-vc142-mt.exp  tinyxml.lib
doc/: dev.md  readme.md
include/Component/: _Window.h
include/Drive/: Driver.h
include/Drive/GlobalDriver/: GlobalDebugoutDriver.cpp  GlobalDriver.h  GlobalIODriver.h  GlobalLogicDriver.h
include/Drive/LocalDriver/: LocalDriver.h
include/Driver/: Driver.hpp
include/Driver/GlobalDriver/: GlobalDebugoutDriver.h  GlobalDriver.h  GlobalIODriver.h  GlobalLightRendDriver.h  GlobalLogicDriver.h  GlobalSyncDriver.h
include/Driver/LocalDriver/: LocalDriver.h  LocalLightDriver.h  LocalRendDriver.h
include/Element/: CameraElement.h  CubeElement.h  Element.h  LightElement.h  ObjectElement.h  SkyboxElement.h
include/GLSL/: object.frag  skybox.vert
include/Resource/: CubeResource.h  MeshResource.h  ModelResource.h  Resource.h  ShaderResource.h  SkyboxResource.cpp  SkyboxResource.h  TextureResource.h  Window.h
include/Scene/: CMakeLists.txt  Scene.cpp  Scene.h  SceneContent.h
include/Scxmlexample/: Helloworld.xml  ground.xml  test.xml
include/Tinyxml/: tinystr.h  tinyxml.h  tinyxmlparser.cpp
include/resources/objects/atomic_bomb_-_easter_freebie/: license.txt  scene.gltf
include/resources/objects/old_pocket_watch/: scene.gltf
include/resources/objects/the_parade_armour_of_king_erik_xiv_of_sweden/: scene.gltf
lib/: XYY_Game_Engine.lib
scxml/: Helloworld.xml  coordinate.xml
test/: CMakeLists.txt  test1.cpp  test2.cpp
test/Scxmlexample/: zzuele.xml
